Bug 69002 - FILEOPEN: File Browser Crash: QWidget::repaint: Recursive repaint detected
Summary: FILEOPEN: File Browser Crash: QWidget::repaint: Recursive repaint detected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other Linux (All)
: high critical
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.2.0
Keywords:
: 59398 59989 69279 70330 71995 72077 72429 73579 73600 73804 74902 75437 77530 78179 79083 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-05 21:21 UTC by fer_calder
Modified: 2018-02-26 12:51 UTC (History)
26 users (show)

See Also:
Crash report or crash signature:


Attachments
libreoffice stderr log file (1.46 KB, text/x-log)
2013-09-05 21:21 UTC, fer_calder
Details
Backtrace with thread apply all and console output (66.40 KB, text/plain)
2013-09-17 21:22 UTC, Henning
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fer_calder 2013-09-05 21:21:19 UTC
Created attachment 85293 [details]
libreoffice stderr log file

Problem description: 
Libreoffice crashes whenever i try to browse files (either because i want to open or save a file, might be a dolphin issue?). Yields "QWidget::repaint: Recursive repaint detected" error
Steps to reproduce:
1. Enter libreoffice
2. Select any software from the suite
3. Select "File>Open File" or "File>Save File" (anything that opens the file browser)
4. Wait for a few secs until the file browser crashes (file browser closes, as well as libreoffice) and shows "QWidget::repaint: Recursive repaint detected" (if run from console)

Current behavior:
File browser inside libreoffice crashes randomly after a few secs

Expected behavior:
Should not crash.

Additional info
OS: Linux arch-linux 3.10.10-1-ARCH
LibreOffice 4.1.1.2 410m0(Build:2)
kdebase-dolphin 4.11.0-1

Other udisks2 related errors are shown (see attached file)
              
Operating System: Linux (Other)
Version: 4.1.1.2 rc
Comment 1 Murz 2013-09-06 08:33:01 UTC
Confirm this issue on Ubuntu Linux too.
Comment 2 Ray-Ven 2013-09-12 18:40:01 UTC
Can confirm this.

Happens on many different machines with LO 4.11 or 4.11.1 in an Kubuntu environment. I'm not sure but think that I have seen it in Windows too, will give further info about it.

Please please correct this issue
Comment 3 Michael 2013-09-12 19:58:34 UTC
Me too.
Please fix it.

Debian jessie
libreoffice 4.1.0.5
Comment 4 Henning 2013-09-17 21:21:01 UTC
I can reproduce the error on my system.

I've attached a full backtrace - the relevant part seems to start with "Thread 1 (Thread 0x7ffff7f93900 (LWP 1541)):"

LibreOffice is version 4.1.1.2.

LibreOffice was built with -O2 and -ggdb as CFLAGS.

The QT version is 4.8.5, the KDE version is 4.11.1.

I'm running Gentoo.

Usually I need to try to insert a file 2 times.

The third or fourth attempt leads to a crash.

The crash happens then as soon as the file dialog is visible - at the 2nd or 1st try the file dialog appears and I can do anything.
Comment 5 Henning 2013-09-17 21:22:51 UTC
Created attachment 86024 [details]
Backtrace with thread apply all and console output
Comment 6 Maxim Monastirsky 2013-10-10 21:51:03 UTC
*** Bug 69279 has been marked as a duplicate of this bug. ***
Comment 7 Maxim Monastirsky 2013-10-10 21:56:09 UTC
Changing some fields according to Bug 69279.
Comment 8 Maxim Monastirsky 2013-10-10 22:07:41 UTC
*** Bug 70330 has been marked as a duplicate of this bug. ***
Comment 9 emilio.recio 2013-10-22 15:24:49 UTC
(In reply to comment #5)
> Created attachment 86024 [details]
> Backtrace with thread apply all and console output

For backtraces see previous bug 69279 which has been marked as a dupe of this one.
Comment 10 Andy 2013-10-26 09:01:15 UTC
Still happens with 4.1.2.3 (Kubuntu), almost every time when using KDE dialogs.
Should the Version # be boosted?

--

Short-term workaround (I think):
- Turn off KDE Open/Save Dialogs in Options | General, using LO Dialogs for Save & Save As

The LO Dialogs are not elegant, but at least you can do a "Save As" without LO crashing almost every time...
Comment 11 Maxim Monastirsky 2013-10-26 16:41:29 UTC
(In reply to comment #10)
> Should the Version # be boosted?
No. The 'Version' field tracks the oldest known version.
Comment 12 public 2013-10-29 10:38:47 UTC
It's not perfectly if that this is related but I think it is:

I usually get crashes only when I hover a media file that is previewed in the  preview bar on the right with a "time line" and a "play button", e.g., a music file. (Except once the crash happened immediately after opening the file picker with "recursice repaint".)
The mentioned "QWidget::repaint: Recursive repaint detected" sometimes appears. Instead, I experienced also "QTimeLine::start: already running" immediately before the crash, or no related message at all.
Still, the crashes seem random, i.e., hovering sometimes gives a crash, sometimes not.

After disabling the preview bar, I haven't seen any further crash so far.

The file picker works fine in other applications, also for the media files.
Comment 13 Jan-Marek Glogowski 2013-11-12 16:27:56 UTC
I've opened https://bugreports.qt-project.org/browse/QTBUG-34614 to get some feedback from Qt. Not sure who has to fix the problem.

I still have the crashes with 4.2 git master build and Kubuntu 13.10. It crashes even faster when the file picker is opened from an external extension (bug #71145).

Same happens with the Kubuntu 13.10 included LO version.
Comment 14 Maxim Monastirsky 2013-11-19 16:07:11 UTC
*** Bug 59398 has been marked as a duplicate of this bug. ***
Comment 15 Maxim Monastirsky 2013-11-20 14:27:59 UTC
A patch was committed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=13a34f4c6307d1bd2443cbf3fbd83bfdd8cdbafb
Comment 16 Maxim Monastirsky 2013-11-25 18:49:15 UTC
*** Bug 71995 has been marked as a duplicate of this bug. ***
Comment 17 Maxim Monastirsky 2013-11-29 08:43:34 UTC
*** Bug 72077 has been marked as a duplicate of this bug. ***
Comment 18 Julien Nabet 2013-12-07 15:49:17 UTC
*** Bug 72429 has been marked as a duplicate of this bug. ***
Comment 19 Maxim Monastirsky 2014-01-14 06:39:27 UTC
*** Bug 73579 has been marked as a duplicate of this bug. ***
Comment 20 Maxim Monastirsky 2014-01-14 12:41:08 UTC
*** Bug 73600 has been marked as a duplicate of this bug. ***
Comment 21 Maxim Monastirsky 2014-01-19 17:43:48 UTC
*** Bug 73804 has been marked as a duplicate of this bug. ***
Comment 22 Emil Velikov 2014-02-01 17:29:03 UTC
Gents, can we have this patch backported to 4.1 (and possibly older versions of LO), pretty please :)

Thanks
Comment 23 Barto 2014-02-12 02:32:13 UTC
this bug occurs again with libreoffice 4.1.5.3, same error, same crash with this message in the console :

QWidget::repaint: Recursive repaint detected

I use archlinux 64 bits, KDE 4.12.2, qt5 5.2.1, qt4 4.8.5,

a workaround is to turn off "KDE Open/Save Dialogs" in "Options->General-> using LO Dialogs for Save & Save As"
Comment 24 Barto 2014-02-12 02:54:34 UTC
sorry, I didn't see that a patch already exists
Comment 25 Maxim Monastirsky 2014-02-12 20:09:41 UTC
*** Bug 74902 has been marked as a duplicate of this bug. ***
Comment 26 Maxim Monastirsky 2014-03-03 12:46:13 UTC
*** Bug 75437 has been marked as a duplicate of this bug. ***
Comment 27 Luboš Luňák 2014-04-25 11:28:01 UTC
*** Bug 77530 has been marked as a duplicate of this bug. ***
Comment 28 Luboš Luňák 2014-04-25 14:46:10 UTC
*** Bug 59989 has been marked as a duplicate of this bug. ***
Comment 29 Commit Notification 2014-04-30 08:30:29 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=80f113efa6f60c6b3aad33128921792451f114ce&h=libreoffice-4-2

fix KFileDialog crashes (fdo#69002)


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 30 Maxim Monastirsky 2014-05-02 09:51:48 UTC
*** Bug 78179 has been marked as a duplicate of this bug. ***
Comment 31 Maxim Monastirsky 2014-11-24 12:51:30 UTC
*** Bug 79083 has been marked as a duplicate of this bug. ***